OpenHealth/force-app/main/default/force-app/main/default/objects/Prescription__c/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <label>Appointment</label>
    <type>Lookup</type>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipName>AppointmentPrescription</relationshipName>
</CustomField>