OpenHealth/force-app/main/default/force-app/main/default/objects/Prescription__c/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>