OpenHealth/force-app/main/default/force-app/main/default/objects/Prescription__c/DurationDays__c.field-meta.xml
<CustomField>
    <fullName>DurationDays__c</fullName>
    <label>DurationDays</label>
    <type>Number</type>
    <length>255</length>
</CustomField>