OpenHealth/force-app/main/default/force-app/main/default/objects/Prescription__c/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Text</type>
    <length>255</length>
</CustomField>