OpenHealth/force-app/main/default/force-app/main/default/objects/Prescription__c/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>