OpenHealth/force-app/main/default/force-app/main/default/objects/Prescription__c/MedicationName__c.field-meta.xml
<CustomField>
    <fullName>MedicationName__c</fullName>
    <label>MedicationName</label>
    <type>Text</type>
    <length>255</length>
</CustomField>